# pig-farm-service

./: .gitignore  .gitmodules  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
docker/api/: Dockerfile
docker/gama-server/: Dockerfile
src/: client.py  main.py
