[tool.poetry]
name = "pig-farm-service"
version = "0.1.0"
description = ""
authors = ["lddtoan"]
readme = "README.md"
packages = [{include = "pig_farm_service"}]

[tool.poetry.dependencies]
python = "^3.8"
gama-client = "^1.1.3"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.0"}
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
